# hexcore-project

./: .gitignore  404.html  README.md  asset-manifest.json  index.html  pyproject.toml  requirements.txt
.github/workflows/: publish-kedro-viz.yml
api/: deploy-viz-metadata  main
api/nodes/: 0832bb49  1308e1ee  168acbea  23ac95f9  341bc06a  3808520f  475d6a59  4fae9a10  509768ef  516ff8a1  5e883ef7  6450c71b  71b0afff  73866776  780517cf  7b16de9d  7cf87198  89b828a1  8e63d0af  9424abce  9621cbf9  9a3ece98  9cb76ca9  afe34018  b2bffe1e  c2fa0eef  c99b73b9  cbc2b2e7  ce8a205d  ded678fe  ee96f7ee
api/pipelines/: cell_map  cell_signature
conf/base/: parameters.yml
conf/local/: catalog.yml  parameters.yml
conf/raptor/: catalog.yml  parameters.yml
data/kedro-viz/: session_store.db
notebooks/: eda_mariana.ipynb  estimate_cell-type_specific_expression_of_every_gene.ipynb  identifying_celular_compartments_nmf.ipynb  leiden_clustering.ipynb  poc_spatial_transcriptomic.ipynb  train_scrna_signature.ipynb  train_spatial_mapping_model.ipynb  usando_dataset_custom.ipynb
notebooks/pipeline/: cellmap_pipeline.ipynb  load_atlas_data.ipynb  load_signature_model.ipynb
src/hexcore_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/hexcore_project/datasets/: anndata.py  scvi_model.py
src/hexcore_project/pipelines/: nodes.py  pipeline.py  utils.py
src/hexcore_project/pipelines/cell_map/: nodes.py  pipeline.py
src/hexcore_project/pipelines/cell_signature/: nodes.py  pipeline.py
static/css/: main.72670987.css
