[tool.poetry]
name = "hexcore-project"
version = "0.1.0"
description = ""
authors = ["Victor Apolonio <victor.henrique.apolonio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = ">=8.10"
jupyterlab = ">=3.0"
kedro-datasets = {extras = ["experimental-pytorch"], version = "^6.0.0"}
kedro-viz = ">=6.7.0"
kedro = {version = ">=0.19.11,<0.20.0", extras = ["jupyter"]}
notebook = "^7.3.2"
scikit-learn = ">=1.5.1,<1.6.0"
scvi-tools = "^1.2.2.post2"
scanpy = "^1.11.0"
cell2location = "^0.1.4"
s3fs = "^2025.3.0"
torch = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.9"
name = "hexcore_project"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro[jupyter]~=0.19.11", "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0", "kedro-viz>=6.7.0", "scikit-learn~=1.5.1", "seaborn~=0.12.1", "igraph (>=0.11.8,<0.12.0)", "leidenalg (>=0.10.2,<0.11.0)"]

[project.scripts]
hexcore-project = "hexcore_project.__main__:main"

[project.optional-dependencies]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.1.8",]

[tool.kedro]
package_name = "hexcore_project"
project_name = "hexcore-project"
kedro_init_version = "0.19.11"
tools = "['Linting', 'Kedro Viz', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.version]
attr = "hexcore_project.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "030db05499ed49ce9eea5b42d0d66fd1"